v0.8.4 | 26/04/2016

  Features

    * Damage dealt is now displayed



v0.8.3a | 24/06/2016

  Updates

    - Unit Stat Changes
        - Mage
            - Increased range to 95 (from 70)



v0.8.3 | 22/06/2016, 23/06/2016

  Features

    * Added an animation for the gold coin gui

  Updates

    - Changed the gold coin gui icon

    - Changed the main menu buttons

    - Changed the buttons and textboxes in the multiplayer connection screen

  Bug Fixes

    ~ Fixed a bug that caused the gold gui to reset to its default position if gold was spent and the camera had already scrolled

    ~ Fixed a bug that caused the mouse to move to the top left part of the window in the multiplayer connection screen



v0.8.2c | 17/06/2016

  Features

    * Added a victory/defeat screen

  Updates

    - Reduced map size by 25%



v0.8.2b | 16/06/2016

  Updates

    - Unit Stat Changes
        - Destroyer
            - Reduced damage to 50 (from 70)



v0.8.2a | 13/06/2016

  Updates

    - Slightly optimized the pause screen

    - Slightly optimized the multiplayer connection screen

    - Slightly optimized the menu screen

    - Turret Stat Changes
        - Laser Turret
            - Increased range to 380 (from 220)



v0.8.2 | 12/06/2016

  Updates

    - Doubled map size

    - The game now pauses if the window loses focus

    - The game's map now only scrolls if the mouse is within the window bounds

  Bug Fixes

    ~ Fixed a bug that caused the view to not reset after returning to the main menu or restarting the game

    ~ Fixed a bug that rendered the cursor in the multiplayer connect state invisible

    ~ Fixed a bug that improperly aligned the gui elements in the multiplayer connect state

    ~ Fixed a bug that caused the game's gui elements to not scroll when the player was scrolling the map



v0.8.0a | 08/06/2016

  Features

    * Added a new mouse cursor



v0.8.0 | 07/06/2016

  Features

    * Integrated turrets into multiplayer

  Updates
