@@ -3,6 +3,7 @@
 
 #include "HealthEntity.h"
 #include "Animation.h"
+#include "ValueDisplays.h"
 
 #include <PYRO/Audio/SoundPlayer.h>
 #include <PYRO/ResourceHolder.h>
@@ -13,16 +14,6 @@ public:
 	enum GeneralUnitType { Melee, Ranged };
 	enum UnitType { Mage, Knight, Samurai, Shadow, Destroyer, Executioner, TypeCount };
 	enum class SoundID { MageAttack, KnightAttack, TypeCount };
-protected:
-	struct DamageDisplay {
-		pyro::Text                      text;
-		sf::Vector2f                    velocity;
-		sf::Vector2f                    acceleration;
-		pyro::utils::Resource<sf::Time> lifetime;
-
-		DamageDisplay(sf::FloatRect enemyGBounds, sf::Font& font, unsigned short damage, bool ally);
-		void operator=(const DamageDisplay& copy);
-	};
 private:
 	const float                 mAttackRange;
 	gStruct::Resource<sf::Time> mAttackRate;
@@ -36,19 +27,16 @@ protected:
 	const unsigned short        mDamage;
 	pyro::SoundPlayer<SoundID>& mSoundPlayer;
 
-	std::vector<DamageDisplay>  mDamageDisplays;
-	sf::Font&                   mDamageDisplayFont;
+	ValueDisplays               mDamageDisplays;
 
 	bool                        mAttacking;
 	Animation                   mAttackAnimation;
 
 protected:
-	void updateDamageDisplays(sf::Time dt);
-
 	bool enemyInRange(HealthEntity& enemy);
 	virtual void handleAttackAnimation(HealthEntity& enemy);
 public:
-	Unit(Side side, sf::Font& font, gStruct::UnitData& data,
+	Unit(Side side, sf::Font& damageDisplayFont, gStruct::UnitData& data,
 		 const pyro::TextureHolder<UnitType>& unitTextures, pyro::SoundPlayer<SoundID>& soundPlayer);
 	virtual ~Unit();
 public:
