@@ -4,6 +4,14 @@ v0.8.4 | 26/04/2016
 
     * Damage dealt is now displayed
 
+  Updates
+
+    - Damage dealt is now displayed at the height of the shortest entity
+
+  Bug Fixes
+
+    ~ Fixed a bug that prevented turret damage from being displayed
+
 
 
 v0.8.3a | 24/06/2016
